2010-12-17 Lorenzo Natale <lorenzo.natale@iit.it>
	* snapshot 1.1.0
	
2010-11-24 Lorenzo Natale <lorenzo.natale@iit.it>
	app/: robot specific files moved to main/app, don't forget to install them with 
	on Linux: make install_applications
	ICUB_ROOT.ini: deleted no longer needed, it gets installed with applications
	
2010-11-24 Lorenzo Natale <lorenzo.natale@iit.it>
	main/CMakeLists.txt: rapth option renamed to ICUB_INSTALL_WITH_RPATH, to match YARP analogous
	
2010-11-22 Lorenzo Natale <lorenzo.natale@iit.it>
	main/CMakeLists.txt: rapth options
	
2010-11-19 Lorenzo Natale <lorenzo.natale@iit.it>
	main/app/CMakeLists.txt: fixed erroneus destination directory
	for icubapp.py and app.txt.template

2010-10-29 Lorenzo Natale <lorenzo.natale@iit.it>
	main/conf/iCubHelpers.cmake modified icub_app functions, grouped code 
	that was spread in different places in single functions to be used
	in contrib.
	
2010-10-25 Lorenzo Natale <lorenzo.natale@iit.it>
	main/conf/iCubHelpers.cmake added checks so that locally modified files are preserved,
	this required deep revision of install mechanism which now uses locally generated cmake
	scripts instead of cmake commands.
	
2010-10-7 Lorenzo Natale <lorenzo.natale@iit.it>
	main/conf/iCubHelpers.cmake icub_app_install(FILES...) now skip directories
	bug fix: wrong behavior with cmake 2.6.0 about creation of directories

2010-10-6 Lorenzo Natale <lorenzo.natale@iit.it>
	main/conf/iCubHelpers.cmake icub_app_install support case 
	in which no DESTINATION is given.

2010-10-6 Lorenzo Natale <lorenzo.natale@iit.it>
	add rules to install manager.py, added target python-scripts
	that manually copies manager.py to the build directory
    
2010-10-6 Lorenzo Natale <lorenzo.natale@iit.it>
	app/default/scripts/manager.py
	main/app/default/scripts/manager.py
	bug fixes on timeout, basic handling of linux/windows
	differences, minor version on windows is 2.6

2010-10-6 Lorenzo Natale <lorenzo.natale@iit.it>