@@ -1,3 +1,7 @@
+2011-21-01 Lorenzo Natale <lorenzo.natale@iit.it>
+	* fixed various installation issues
+	* added versioning information
+	
 2010-12-17 Lorenzo Natale <lorenzo.natale@iit.it>
 	* snapshot 1.1.0
 	
